feat : add order, stock service cloud

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,9 @@ spring:
         - uri: lb://product-service
           predicates:
             - Path=/product-service/**
+        - uri: lb://stock-service
+          predicates:
+            - Path=/stock-service/**
+        - uri: lb://order-service
+          predicates:
+            - Path=/order-service/**
